// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperAppsCollection should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h2
        class="browse-apps-subtitle el-subtitle"
      >
        My Apps
      </h2>
      <div
        class="developer-apps-grid"
      >
        <div
          class="developer-apps-col-helper"
        >
          <div
            class="el-flex-align-center el-flex-container"
          >
            <span
              class="el-mr3 el-icon"
              style="font-size: 5rem;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 80 81"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#clip0_8734_98228)"
                >
                  <path
                    d="M67.9917 64.4999H49.5633C49.5629 64.4999 49.5624 64.4999 49.5619 64.4999C48.1494 64.4957 47.004 63.3503 47 61.9377V23.0622C47.004 21.6495 48.1495 20.504 49.5622 20.5H67.9928C69.4054 20.504 70.5508 21.6494 70.555 23.0619V61.9384C70.5501 63.3515 69.4055 64.4957 67.9931 64.4999C67.9926 64.4999 67.9921 64.4999 67.9917 64.4999Z"
                    fill="#23A4DE"
                    stroke="#262F69"
                    stroke-width="2"
                  />
                  <path
                    d="M67.9941 65.4998H49.5609C47.597 65.495 46.0048 63.9028 46 61.9389V57.4287C57.7416 57.4287 61.1063 57.4287 71.555 57.4287V61.9401C71.549 63.904 69.958 65.495 67.9941 65.4998Z"
                    fill="#31448F"
                  />
                  <rect
                    fill="#7BC9EB"
                    height="13"
                    rx="1"
                    width="12"
                    x="51"
                    y="23.5"
                  />
                  <rect
                    fill="#7BC9EB"
                    height="10"
                    rx="1"
                    width="16"
                    x="51"
                    y="44.5"
                  />
                  <rect
                    fill="#7BC9EB"
                    height="3"
                    rx="1"
                    width="11"
                    x="51"
                    y="38.5"
                  />
                  <mask
                    height="22"
                    id="mask0_8734_98228"
                    maskUnits="userSpaceOnUse"
                    width="58"
                    x="-2"
                    y="54"
                  >
                    <ellipse
                      fill="#C4C4C4"
                      rx="28.5101"
                      ry="10.3309"
                      transform="matrix(1 0 1.80265e-05 1 27.1509 64.8309)"
                    />
                  </mask>
                  <g
                    mask="url(#mask0_8734_98228)"
                  >
                    <rect
                      fill="#F2F2F2"
                      height="64.7295"
                      transform="matrix(0.998843 -0.0480906 0.0481086 0.998842 -7.67188 15.0396)"
                      width="70.6812"
                    />
                    <path
                      d="M50.6339 77.3345C50.6339 77.3345 43.8113 77.663 38.5829 74.0503C30.725 71.7694 33.4732 55.6337 34.0484 55.015C34.6235 54.3961 40.0216 54.6748 43.1363 55.9668C47.42 57.7436 47.4202 60.719 48.603 63.5667C50.3197 67.7001 50.3197 70.8098 50.3197 70.8098C51.4734 70.7542 49.572 74.4952 50.6339 77.3345Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M20.9596 58.885C20.7083 60.6252 15.0281 67.665 14.6606 77.1946C21.914 83.8598 32.7166 84.5252 40.7408 79.4955C39.6858 71.6344 36.3543 59.5521 34.5855 56.0263C32.1267 51.1257 27.287 50.2253 27.287 50.2253C27.287 50.2253 21.2889 56.6048 20.9596 58.885Z"
                      fill="#7BC9EB"
                    />
                    <ellipse
                      fill="#0076AB"
                      rx="5.35574"
                      ry="4.23584"
                      transform="matrix(0.998843 -0.0480905 0.0481086 0.998842 28.6939 54.9309)"
                    />
                    <path
                      d="M13.3719 87.7491C13.3719 87.7491 12.6732 76.4011 18.2158 71.8404C23.7585 67.2801 23.7157 55.8989 23.2576 55.2613C22.7996 54.6235 14.1407 55.0119 11.6661 57.2999C7.05685 61.5618 7.04487 68.8057 5.31321 74.7601C2.68182 73.3187 14.1638 85.0112 13.3719 87.7491Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M15.1906 75.9187C15.511 73.1201 17.4823 66.6354 17.4823 66.6354C17.4823 66.6354 16.6278 74.0984 18.8772 77.5691C17.6535 77.5236 16.2461 76.6065 15.1906 75.9187Z"
                      fill="#0076AB"
                    />
                    <path
                      d="M42.1435 74.9948C41.8125 72.1705 39.8051 65.6299 39.8051 65.6299C39.8051 65.6299 40.6878 73.1611 38.4266 76.6705C39.6616 76.6214 41.0798 75.6919 42.1435 74.9948Z"
                      fill="#0076AB"
                    />
                  </g>
                  <path
                    d="M18.9161 40.655C19.0314 43.048 17.3139 45.0751 15.0801 45.1827C12.8461 45.2903 10.9417 43.4375 10.8265 41.0445C10.7112 38.6513 12.4287 36.6241 14.6627 36.5166C16.8965 36.409 18.8009 38.2618 18.9161 40.655Z"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M45.8771 39.1137C45.9924 41.507 44.2748 43.5341 42.0411 43.6417C39.807 43.7492 37.9027 41.8964 37.7874 39.5032C37.6721 37.1103 39.3896 35.0828 41.6237 34.9753C43.8574 34.8677 45.7618 36.7208 45.8771 39.1137Z"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M14.0215 38.8026C14.0215 38.8026 15.4802 57.5252 28.9771 56.8753C42.474 56.2255 43.4387 41.5625 42.8642 36.2446C42.29 30.9266 39.5108 22.7916 39.5108 22.7916L28.1013 22.1715L18.1943 24.6533L13.6464 27.7121L13.4933 31.1437L14.0215 38.8026Z"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M20.7822 32.2006C20.7603 32.5872 21.2456 32.5038 21.647 32.4375C22.4818 32.2997 22.2326 31.6842 23.9916 31.6679C24.6298 31.662 25.6719 32.6734 25.9663 32.1271C26.8029 30.5744 20.9331 29.5451 20.7822 32.2006Z"
                    fill="#262F69"
                  />
                  <path
                    d="M38.9165 31.7486C38.5161 30.9988 37.1895 30.6767 36.2709 30.7784C35.5018 30.8635 34.2141 31.2491 34.2694 32.0364C34.2864 32.2774 34.6474 32.234 34.9282 32.1697C35.3644 32.0699 35.5402 31.892 35.962 31.8535C36.372 31.8159 36.7944 31.8861 37.155 32.0493C37.5917 32.2471 37.9021 32.5521 38.4531 32.3974C38.9478 32.2583 39.117 32.1242 38.9165 31.7486Z"
                    fill="#262F69"
                  />
                  <path
                    d="M36.8032 36.4079C36.7593 36.3828 36.7127 36.361 36.6634 36.3429C35.0359 35.7455 34.4836 38.3241 35.6716 38.7426C37.3867 39.3468 37.8219 36.9898 36.8032 36.4079Z"
                    fill="#262F69"
                  />
                  <path
                    d="M36.6035 36.6935C36.423 36.5224 36.0797 36.6745 36.1287 36.9074C36.1537 37.0262 36.1775 37.1212 36.2872 37.202C36.4545 37.3257 36.7896 37.1809 36.776 36.9838C36.7671 36.8556 36.6975 36.7827 36.6035 36.6935Z"
                    fill="white"
                  />
                  <path
                    d="M23.2843 47.9668C23.2843 47.9668 25.3871 51.0719 29.3535 49.7721C27.2141 51.4771 24.0891 52.142 23.2843 47.9668Z"
                    fill="#262F69"
                  />
                  <path
                    d="M17.0021 19.3002C17.6687 13.5669 24.264 11.1542 30.7354 12.3669C43.402 14.7405 47.6688 25.8335 42.6021 36.5002C41.8021 34.1002 42.8929 30.2528 40.4687 26.7669C36.7872 21.4736 33.7835 23.5521 27.5354 24.3669C22.6456 25.0046 19.1354 21.3002 19.1354 21.3002C13.0021 26.3669 20.6021 29.5669 14.4687 37.8335C11.9354 33.5669 8.20209 20.7669 17.0021 19.3002Z"
                    fill="#262F69"
                  />
                  <path
                    d="M16.89 25.9614C16.0326 23.3379 17.3035 19.6761 20.7028 19.1745C17.9292 22.1396 18.6883 25.5649 19.9491 29.2235C18.5514 28.5163 17.3766 27.4503 16.89 25.9614Z"
                    fill="#262F69"
                  />
                  <path
                    d="M13.5146 18.8992C14.9306 17.8411 17.4129 17.8614 18.4142 19.8209C15.8396 20.9414 13.6574 19.1176 12.1626 21.4241C12.3051 20.431 12.711 19.4997 13.5146 18.8992Z"
                    fill="#262F69"
                  />
                  <path
                    d="M16.3356 21.483C18.725 18.5852 16.4121 14.4346 20.3807 13.3235C16.2875 13.5943 13.8191 19.3419 16.3356 21.483Z"
                    fill="#262F69"
                  />
                  <path
                    d="M25.418 28.6324C25.2873 21.2768 20.5007 22.1726 19.8892 17.1257C11.4983 23.5343 22.4029 24.2394 25.418 28.6324Z"
                    fill="#262F69"
                  />
                  <path
                    d="M23.9194 36.1783C23.8718 36.1512 23.8213 36.1275 23.7679 36.1079C22.0038 35.4604 21.4052 38.2554 22.6929 38.709C24.5519 39.3639 25.0236 36.8091 23.9194 36.1783Z"
                    fill="#262F69"
                  />
                  <path
                    d="M23.702 36.4876C23.5064 36.3021 23.1343 36.4671 23.1874 36.7195C23.2147 36.8481 23.2403 36.9512 23.3592 37.0389C23.5405 37.1729 23.9038 37.0161 23.8891 36.8024C23.8793 36.6633 23.8039 36.5843 23.702 36.4876Z"
                    fill="white"
                  />
                  <path
                    d="M16.5 34.1147V42.0856C16.5 42.3859 16.7462 42.6315 17.0471 42.6315H26.9018C27.2027 42.6315 27.4489 42.3859 27.4489 42.0856L27.4491 38.5915H30.8415V42.0856C30.8415 42.3859 31.0877 42.6315 31.3886 42.6315H41.2433C41.5442 42.6315 41.7904 42.3859 41.7904 42.0856V34.1147C41.7904 33.8145 41.5442 33.5688 41.2433 33.5688H31.3886C31.0877 33.5688 30.8415 33.8145 30.8415 34.1147V37.4997H27.4216V34.1147C27.4216 33.8145 27.1754 33.5688 26.8745 33.5688H17.0471C16.7462 33.5688 16.5 33.8145 16.5 34.1147ZM32.2023 35.4608H40.4294V40.7398L32.2023 40.7396V35.4608ZM17.8609 35.4608H26.088V40.7398L17.8609 40.7396V35.4608Z"
                    fill="#262F69"
                  />
                  <path
                    d="M57.4349 49.5H38.6985C36.6594 49.5 35 51.107 35 53.0822V64.4345C35 66.4098 36.6594 68.0167 38.6985 68.0167H57.4349C59.474 68.0167 61.1333 66.4098 61.1333 64.4345V53.0822C61.1333 51.107 59.474 49.5 57.4349 49.5Z"
                    fill="white"
                  />
                  <path
                    d="M57.4325 49.5H52.1331C50.094 49.5 48.4346 51.107 48.4346 53.0822L44.5703 64.4345C44.5703 66.4098 46.2297 68.0167 48.2688 68.0167H57.4325C59.4716 68.0167 61.131 66.4098 61.131 64.4345V53.0822C61.131 51.107 59.4716 49.5 57.4325 49.5Z"
                    fill="white"
                  />
                  <path
                    d="M57.4349 49.5H38.6985C36.6594 49.5 35 51.107 35 53.0822V64.4345C35 66.4098 36.6594 68.0167 38.6985 68.0167H57.4349C59.474 68.0167 61.1333 66.4098 61.1333 64.4345V53.0822C61.1333 51.107 59.474 49.5 57.4349 49.5ZM44.4841 55.1989L40.5931 58.967L44.0533 62.3179C44.3524 62.6075 44.3524 63.0771 44.0533 63.3663C43.7547 63.656 43.2698 63.656 42.9707 63.3663L38.969 59.4909C38.6699 59.2013 38.6699 58.7322 38.969 58.4425L43.4009 54.1504C43.7001 53.8608 44.1849 53.8608 44.4841 54.1504C44.7826 54.4396 44.7826 54.9092 44.4841 55.1989ZM51.1765 53.4545L47.1279 64.5561C46.987 64.9427 46.5496 65.1448 46.151 65.0084C45.7523 64.872 45.5431 64.4483 45.6839 64.0623L49.7326 52.9606C49.8734 52.5746 50.3104 52.3719 50.7095 52.5084C51.1081 52.6448 51.3174 53.0684 51.1765 53.4545ZM57.1643 59.0742L52.7324 63.3663C52.4333 63.656 51.9484 63.656 51.6493 63.3663C51.3507 63.0771 51.3507 62.6075 51.6493 62.3179L55.5402 58.5498L52.0801 55.1989C51.781 54.9092 51.781 54.4396 52.0801 54.1504C52.3787 53.8608 52.8636 53.8608 53.1627 54.1504L57.1643 58.0258C57.4634 58.3155 57.4634 58.7846 57.1643 59.0742Z"
                    fill="#FFB71B"
                  />
                </g>
                <defs>
                  <clippath
                    id="clip0_8734_98228"
                  >
                    <rect
                      fill="white"
                      height="80"
                      transform="translate(0 0.5)"
                      width="80"
                    />
                  </clippath>
                </defs>
              </svg>
            </span>
            <p
              class="developer-main-strapline el-body-text"
            >
              Apps you are currently developing show here. These will not be visible to users until approved for public listing.
            </p>
          </div>
        </div>
        <div
          class="el-fade-in developer-apps-col"
        >
          <div
            class="el-flex-align-center el-flex-container"
          >
            <div
              class="el-mr5 el-placeholder-image"
              style="font-size: 1.25em; width: 32px; height: 32px;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 60 35"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                  fill="#E3E3E3"
                />
              </svg>
            </div>
            <p
              class="developer-subtitle el-body-text"
            >
              MOCK_APP_NAME
            </p>
          </div>
        </div>
        <div
          class="el-fade-in developer-apps-col"
        >
          <div
            class="el-flex-align-center el-flex-container"
          >
            <div
              class="el-mr5 el-placeholder-image"
              style="font-size: 1.25em; width: 32px; height: 32px;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 60 35"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                  fill="#E3E3E3"
                />
              </svg>
            </div>
            <p
              class="developer-subtitle el-body-text"
            >
              MOCK_APP_NAME_ANOTHER
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h2
      class="browse-apps-subtitle el-subtitle"
    >
      My Apps
    </h2>
    <div
      class="developer-apps-grid"
    >
      <div
        class="developer-apps-col-helper"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <span
            class="el-mr3 el-icon"
            style="font-size: 5rem;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 80 81"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_8734_98228)"
              >
                <path
                  d="M67.9917 64.4999H49.5633C49.5629 64.4999 49.5624 64.4999 49.5619 64.4999C48.1494 64.4957 47.004 63.3503 47 61.9377V23.0622C47.004 21.6495 48.1495 20.504 49.5622 20.5H67.9928C69.4054 20.504 70.5508 21.6494 70.555 23.0619V61.9384C70.5501 63.3515 69.4055 64.4957 67.9931 64.4999C67.9926 64.4999 67.9921 64.4999 67.9917 64.4999Z"
                  fill="#23A4DE"
                  stroke="#262F69"
                  stroke-width="2"
                />
                <path
                  d="M67.9941 65.4998H49.5609C47.597 65.495 46.0048 63.9028 46 61.9389V57.4287C57.7416 57.4287 61.1063 57.4287 71.555 57.4287V61.9401C71.549 63.904 69.958 65.495 67.9941 65.4998Z"
                  fill="#31448F"
                />
                <rect
                  fill="#7BC9EB"
                  height="13"
                  rx="1"
                  width="12"
                  x="51"
                  y="23.5"
                />
                <rect
                  fill="#7BC9EB"
                  height="10"
                  rx="1"
                  width="16"
                  x="51"
                  y="44.5"
                />
                <rect
                  fill="#7BC9EB"
                  height="3"
                  rx="1"
                  width="11"
                  x="51"
                  y="38.5"
                />
                <mask
                  height="22"
                  id="mask0_8734_98228"
                  maskUnits="userSpaceOnUse"
                  width="58"
                  x="-2"
                  y="54"
                >
                  <ellipse
                    fill="#C4C4C4"
                    rx="28.5101"
                    ry="10.3309"
                    transform="matrix(1 0 1.80265e-05 1 27.1509 64.8309)"
                  />
                </mask>
                <g
                  mask="url(#mask0_8734_98228)"
                >
                  <rect
                    fill="#F2F2F2"
                    height="64.7295"
                    transform="matrix(0.998843 -0.0480906 0.0481086 0.998842 -7.67188 15.0396)"
                    width="70.6812"
                  />
                  <path
                    d="M50.6339 77.3345C50.6339 77.3345 43.8113 77.663 38.5829 74.0503C30.725 71.7694 33.4732 55.6337 34.0484 55.015C34.6235 54.3961 40.0216 54.6748 43.1363 55.9668C47.42 57.7436 47.4202 60.719 48.603 63.5667C50.3197 67.7001 50.3197 70.8098 50.3197 70.8098C51.4734 70.7542 49.572 74.4952 50.6339 77.3345Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M20.9596 58.885C20.7083 60.6252 15.0281 67.665 14.6606 77.1946C21.914 83.8598 32.7166 84.5252 40.7408 79.4955C39.6858 71.6344 36.3543 59.5521 34.5855 56.0263C32.1267 51.1257 27.287 50.2253 27.287 50.2253C27.287 50.2253 21.2889 56.6048 20.9596 58.885Z"
                    fill="#7BC9EB"
                  />
                  <ellipse
                    fill="#0076AB"
                    rx="5.35574"
                    ry="4.23584"
                    transform="matrix(0.998843 -0.0480905 0.0481086 0.998842 28.6939 54.9309)"
                  />
                  <path
                    d="M13.3719 87.7491C13.3719 87.7491 12.6732 76.4011 18.2158 71.8404C23.7585 67.2801 23.7157 55.8989 23.2576 55.2613C22.7996 54.6235 14.1407 55.0119 11.6661 57.2999C7.05685 61.5618 7.04487 68.8057 5.31321 74.7601C2.68182 73.3187 14.1638 85.0112 13.3719 87.7491Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M15.1906 75.9187C15.511 73.1201 17.4823 66.6354 17.4823 66.6354C17.4823 66.6354 16.6278 74.0984 18.8772 77.5691C17.6535 77.5236 16.2461 76.6065 15.1906 75.9187Z"
                    fill="#0076AB"
                  />
                  <path
                    d="M42.1435 74.9948C41.8125 72.1705 39.8051 65.6299 39.8051 65.6299C39.8051 65.6299 40.6878 73.1611 38.4266 76.6705C39.6616 76.6214 41.0798 75.6919 42.1435 74.9948Z"
                    fill="#0076AB"
                  />
                </g>
                <path
                  d="M18.9161 40.655C19.0314 43.048 17.3139 45.0751 15.0801 45.1827C12.8461 45.2903 10.9417 43.4375 10.8265 41.0445C10.7112 38.6513 12.4287 36.6241 14.6627 36.5166C16.8965 36.409 18.8009 38.2618 18.9161 40.655Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M45.8771 39.1137C45.9924 41.507 44.2748 43.5341 42.0411 43.6417C39.807 43.7492 37.9027 41.8964 37.7874 39.5032C37.6721 37.1103 39.3896 35.0828 41.6237 34.9753C43.8574 34.8677 45.7618 36.7208 45.8771 39.1137Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M14.0215 38.8026C14.0215 38.8026 15.4802 57.5252 28.9771 56.8753C42.474 56.2255 43.4387 41.5625 42.8642 36.2446C42.29 30.9266 39.5108 22.7916 39.5108 22.7916L28.1013 22.1715L18.1943 24.6533L13.6464 27.7121L13.4933 31.1437L14.0215 38.8026Z"
                  fill="#FFE5C7"
                />
                <path
                  d="M20.7822 32.2006C20.7603 32.5872 21.2456 32.5038 21.647 32.4375C22.4818 32.2997 22.2326 31.6842 23.9916 31.6679C24.6298 31.662 25.6719 32.6734 25.9663 32.1271C26.8029 30.5744 20.9331 29.5451 20.7822 32.2006Z"
                  fill="#262F69"
                />
                <path
                  d="M38.9165 31.7486C38.5161 30.9988 37.1895 30.6767 36.2709 30.7784C35.5018 30.8635 34.2141 31.2491 34.2694 32.0364C34.2864 32.2774 34.6474 32.234 34.9282 32.1697C35.3644 32.0699 35.5402 31.892 35.962 31.8535C36.372 31.8159 36.7944 31.8861 37.155 32.0493C37.5917 32.2471 37.9021 32.5521 38.4531 32.3974C38.9478 32.2583 39.117 32.1242 38.9165 31.7486Z"
                  fill="#262F69"
                />
                <path
                  d="M36.8032 36.4079C36.7593 36.3828 36.7127 36.361 36.6634 36.3429C35.0359 35.7455 34.4836 38.3241 35.6716 38.7426C37.3867 39.3468 37.8219 36.9898 36.8032 36.4079Z"
                  fill="#262F69"
                />
                <path
                  d="M36.6035 36.6935C36.423 36.5224 36.0797 36.6745 36.1287 36.9074C36.1537 37.0262 36.1775 37.1212 36.2872 37.202C36.4545 37.3257 36.7896 37.1809 36.776 36.9838C36.7671 36.8556 36.6975 36.7827 36.6035 36.6935Z"
                  fill="white"
                />
                <path
                  d="M23.2843 47.9668C23.2843 47.9668 25.3871 51.0719 29.3535 49.7721C27.2141 51.4771 24.0891 52.142 23.2843 47.9668Z"
                  fill="#262F69"
                />
                <path
                  d="M17.0021 19.3002C17.6687 13.5669 24.264 11.1542 30.7354 12.3669C43.402 14.7405 47.6688 25.8335 42.6021 36.5002C41.8021 34.1002 42.8929 30.2528 40.4687 26.7669C36.7872 21.4736 33.7835 23.5521 27.5354 24.3669C22.6456 25.0046 19.1354 21.3002 19.1354 21.3002C13.0021 26.3669 20.6021 29.5669 14.4687 37.8335C11.9354 33.5669 8.20209 20.7669 17.0021 19.3002Z"
                  fill="#262F69"
                />
                <path
                  d="M16.89 25.9614C16.0326 23.3379 17.3035 19.6761 20.7028 19.1745C17.9292 22.1396 18.6883 25.5649 19.9491 29.2235C18.5514 28.5163 17.3766 27.4503 16.89 25.9614Z"
                  fill="#262F69"
                />
                <path
                  d="M13.5146 18.8992C14.9306 17.8411 17.4129 17.8614 18.4142 19.8209C15.8396 20.9414 13.6574 19.1176 12.1626 21.4241C12.3051 20.431 12.711 19.4997 13.5146 18.8992Z"
                  fill="#262F69"
                />
                <path
                  d="M16.3356 21.483C18.725 18.5852 16.4121 14.4346 20.3807 13.3235C16.2875 13.5943 13.8191 19.3419 16.3356 21.483Z"
                  fill="#262F69"
                />
                <path
                  d="M25.418 28.6324C25.2873 21.2768 20.5007 22.1726 19.8892 17.1257C11.4983 23.5343 22.4029 24.2394 25.418 28.6324Z"
                  fill="#262F69"
                />
                <path
                  d="M23.9194 36.1783C23.8718 36.1512 23.8213 36.1275 23.7679 36.1079C22.0038 35.4604 21.4052 38.2554 22.6929 38.709C24.5519 39.3639 25.0236 36.8091 23.9194 36.1783Z"
                  fill="#262F69"
                />
                <path
                  d="M23.702 36.4876C23.5064 36.3021 23.1343 36.4671 23.1874 36.7195C23.2147 36.8481 23.2403 36.9512 23.3592 37.0389C23.5405 37.1729 23.9038 37.0161 23.8891 36.8024C23.8793 36.6633 23.8039 36.5843 23.702 36.4876Z"
                  fill="white"
                />
                <path
                  d="M16.5 34.1147V42.0856C16.5 42.3859 16.7462 42.6315 17.0471 42.6315H26.9018C27.2027 42.6315 27.4489 42.3859 27.4489 42.0856L27.4491 38.5915H30.8415V42.0856C30.8415 42.3859 31.0877 42.6315 31.3886 42.6315H41.2433C41.5442 42.6315 41.7904 42.3859 41.7904 42.0856V34.1147C41.7904 33.8145 41.5442 33.5688 41.2433 33.5688H31.3886C31.0877 33.5688 30.8415 33.8145 30.8415 34.1147V37.4997H27.4216V34.1147C27.4216 33.8145 27.1754 33.5688 26.8745 33.5688H17.0471C16.7462 33.5688 16.5 33.8145 16.5 34.1147ZM32.2023 35.4608H40.4294V40.7398L32.2023 40.7396V35.4608ZM17.8609 35.4608H26.088V40.7398L17.8609 40.7396V35.4608Z"
                  fill="#262F69"
                />
                <path
                  d="M57.4349 49.5H38.6985C36.6594 49.5 35 51.107 35 53.0822V64.4345C35 66.4098 36.6594 68.0167 38.6985 68.0167H57.4349C59.474 68.0167 61.1333 66.4098 61.1333 64.4345V53.0822C61.1333 51.107 59.474 49.5 57.4349 49.5Z"
                  fill="white"
                />
                <path
                  d="M57.4325 49.5H52.1331C50.094 49.5 48.4346 51.107 48.4346 53.0822L44.5703 64.4345C44.5703 66.4098 46.2297 68.0167 48.2688 68.0167H57.4325C59.4716 68.0167 61.131 66.4098 61.131 64.4345V53.0822C61.131 51.107 59.4716 49.5 57.4325 49.5Z"
                  fill="white"
                />
                <path
                  d="M57.4349 49.5H38.6985C36.6594 49.5 35 51.107 35 53.0822V64.4345C35 66.4098 36.6594 68.0167 38.6985 68.0167H57.4349C59.474 68.0167 61.1333 66.4098 61.1333 64.4345V53.0822C61.1333 51.107 59.474 49.5 57.4349 49.5ZM44.4841 55.1989L40.5931 58.967L44.0533 62.3179C44.3524 62.6075 44.3524 63.0771 44.0533 63.3663C43.7547 63.656 43.2698 63.656 42.9707 63.3663L38.969 59.4909C38.6699 59.2013 38.6699 58.7322 38.969 58.4425L43.4009 54.1504C43.7001 53.8608 44.1849 53.8608 44.4841 54.1504C44.7826 54.4396 44.7826 54.9092 44.4841 55.1989ZM51.1765 53.4545L47.1279 64.5561C46.987 64.9427 46.5496 65.1448 46.151 65.0084C45.7523 64.872 45.5431 64.4483 45.6839 64.0623L49.7326 52.9606C49.8734 52.5746 50.3104 52.3719 50.7095 52.5084C51.1081 52.6448 51.3174 53.0684 51.1765 53.4545ZM57.1643 59.0742L52.7324 63.3663C52.4333 63.656 51.9484 63.656 51.6493 63.3663C51.3507 63.0771 51.3507 62.6075 51.6493 62.3179L55.5402 58.5498L52.0801 55.1989C51.781 54.9092 51.781 54.4396 52.0801 54.1504C52.3787 53.8608 52.8636 53.8608 53.1627 54.1504L57.1643 58.0258C57.4634 58.3155 57.4634 58.7846 57.1643 59.0742Z"
                  fill="#FFB71B"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_8734_98228"
                >
                  <rect
                    fill="white"
                    height="80"
                    transform="translate(0 0.5)"
                    width="80"
                  />
                </clippath>
              </defs>
            </svg>
          </span>
          <p
            class="developer-main-strapline el-body-text"
          >
            Apps you are currently developing show here. These will not be visible to users until approved for public listing.
          </p>
        </div>
      </div>
      <div
        class="el-fade-in developer-apps-col"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <div
            class="el-mr5 el-placeholder-image"
            style="font-size: 1.25em; width: 32px; height: 32px;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 60 35"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                fill="#E3E3E3"
              />
            </svg>
          </div>
          <p
            class="developer-subtitle el-body-text"
          >
            MOCK_APP_NAME
          </p>
        </div>
      </div>
      <div
        class="el-fade-in developer-apps-col"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <div
            class="el-mr5 el-placeholder-image"
            style="font-size: 1.25em; width: 32px; height: 32px;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 60 35"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                fill="#E3E3E3"
              />
            </svg>
          </div>
          <p
            class="developer-subtitle el-body-text"
          >
            MOCK_APP_NAME_ANOTHER
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperAppsCollection should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
